Home.html Mostly Finished

--- a/home.html
+++ b/home.html
@@ -51,11 +51,29 @@
         <p>
           For the longest time, black holes were seen as possibly only theoretical. However, today, we have observed and studied extensively dozens of these objects, cataloguing extremely compelling <a href="evidence.html">observational evidence</a> for these object's existence.
         </p>
+        <br>
+        <br>
+        <br>
         <h2>How were black holes discovered?</h2>
+                <img src="Spacetime_lattice.png" alt="A simulation showing the space-time lattice of a massive body.">
         <p>
-          Black holes were first predicted in 1915 by Karl Schwartzchild, a German physicist, using Albert Einstein's Theory of General Relativity, published earlier that year. Schwartzchild's solution to the Einstien Field Equations created a singularity at the very center of a non-spinning, non-charged black hole. This was poorly-understood at the time, but later research showed that this object would have an event horizon. This event horizon forms the boundary between the inside and the outside of the black hole, and 
+          Black holes were first predicted in 1915 by Karl Schwartzchild, a German physicist, using Albert Einstein's Theory of General Relativity, published earlier that year. Schwartzchild's solution to the Einstien Field Equations created a singularity at the very center of a non-spinning, non-charged black hole. This was poorly-understood at the time, but it was later realized that this object would have an event horizon -- the key property of what we today call black holes.
         </p>
-        <p>For more on the history of black holes, see the <a href="history.html">history page</a>.</p>          
+        <p>For more on the history of black holes, see the <a href="history.html">history page</a>.</p>
+        <br>
+        <br>
+        <br>
+        <img src="PairInstability.jpg" alt="A diagram showing a pair-instability supernova.">
+        <h2>How do black holes form?</h2>
+        <p>
+          Lower-mass black holes, about 3-100 masses of the sun, are thought to form when extremely massive stars, dozens or even hundreds of times as massive as the sun, reach the ends of their lives. Dying in supernovae, their cores reamin, and collapse into stellar-mass black holes. Other types of stellar remnants, like white dwarfs and neutron stars, also can be produced, but generally by stars too small to form a black hole.
+        </p>
+        <p>
+          Larger black holes, known as intermediate mass black holes, are today something of an enigma. There is currently no obvious mechanism by which these can form, leading to multiple theories, including some about black hole mergers, and others about stellar collisons causing collapse into these objects. Whatever the mechanism is, though, intermediate mass black holes are dwarfed by the last category of black holes, known as supermassive black holes.
+        </p>
+        <p>
+          Supermassive black holes, like Sgr A* at the center of the Milky Way Galaxy, are extremely large black holes, with masses on the order of millions to billions of times the mass of the sun. These objects are primarily found at the cores of galaxies, spawned by the extreme conditions present in the very centers of galactic structure. They have been showed to possibly be formed as the result of direct collapse of extremely large amounts of material, but may also have been formed by extremely massive 'quasi-stars' in the early universe, and only grown since. Another theory posits that they are instead primordial black holes: Objects dating all the way back to the Big Bang itself and therefore the oldest objects in the Universe.
+        </p>
       </div>
       <div id="footerspacing">
         <br>
@@ -67,11 +85,15 @@
     <footer>
       <div id="sitefooter">
         <div id="siteowner">
-          <p>JACK UTEG</p>
+          <a href="https://github.com/HobbitJack">
+            <p>JACK UTEG</p>
+          </a>
         </div>
         <div id="footerlinks">
+          <nav>
           <a href="credits.html">Credits and Sources</a>
           <a href="copyright.html">Copyright</a>
+          </nav>
         </div>
     </footer>
   </body>
