3/5 Main Pages Done!*

--- a/home.html
+++ b/home.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang='en'>
-
   <head>
     <meta charset="UTF-8">
     <meta name="author" content="Jack Uteg">
-    <meta name="description" content="A Web Site for the AST207 Final Project">
+    <meta name="description" content="A Web Site for the AST 207 Final Project">
     <title>AST 207 Black Hole Evidence Project</title>
     <link rel="icon" href="SgrA_EHT.jpg" type="image/x-icon">
     <!--Font-->
@@ -43,36 +42,49 @@
         <br>
       </div>
       <div id="bodytext">
-        <img src="BeamingBlackhole.jpeg" alt="A simulation of a black hole.">
+        <img src="BlackHole.gif" alt="A simulation of a black hole showing relativistic effects, like Doppler beaming.">
         <h2>What are black holes?</h2>
         <p>
-          Black holes are regions of space-time caused when a massive body becomes so dense that the surface gravity of the body causes the escape velocity to exceed the speed of light. As nothing can travel faster than light, this creates a region of spacetime where things -- like matter and energy -- can enter, but nothing can leave.
+          Black holes are regions of space-time caused when a massive body becomes so dense that the surface gravity of the body causes the escape velocity to exceed the speed of light.
+          As nothing can travel faster than light, this creates a region of spacetime where things -- like matter and energy -- can enter, but nothing can leave.
         </p>
         <p>
-          For the longest time, black holes were seen as possibly only theoretical. However, today, we have observed and studied extensively dozens of these objects, cataloguing extremely compelling <a href="evidence.html">observational evidence</a> for these object's existence.
+          For the longest time, black holes were seen as possibly only theoretical.
+          However, today, we have observed and studied extensively dozens of these objects, cataloging extremely compelling <a href="observation.html">observational evidence</a> for these object's existence.
         </p>
         <br>
         <br>
         <br>
         <h2>How were black holes discovered?</h2>
-                <img src="Spacetime_lattice.png" alt="A simulation showing the space-time lattice of a massive body.">
+        <img src="Spacetime_lattice.png" alt="A simulation showing the space-time lattice of a massive body.">
         <p>
-          Black holes were first predicted in 1915 by Karl Schwartzchild, a German physicist, using Albert Einstein's Theory of General Relativity, published earlier that year. Schwartzchild's solution to the Einstien Field Equations created a singularity at the very center of a non-spinning, non-charged black hole. This was poorly-understood at the time, but it was later realized that this object would have an event horizon -- the key property of what we today call black holes.
+          Black holes were first predicted in 1915 by Karl Schwartzchild, a German physicist, using Albert Einstein's Theory of General Relativity, published earlier that year.
+          Schwartzchild's solution to the Einstein Field Equations created a singularity at the very center of a non-spinning, non-charged black hole. This was poorly-understood at the time, but it was later realized that this object would have an event horizon -- the key property of what we today call black holes.
         </p>
         <p>For more on the history of black holes, see the <a href="history.html">history page</a>.</p>
         <br>
         <br>
         <br>
-        <img src="PairInstability.jpg" alt="A diagram showing a pair-instability supernova.">
+        <img src="PairInstability.jpg" alt="A diagram showing the cause of pair-instability supernovae.">
         <h2>How do black holes form?</h2>
         <p>
-          Lower-mass black holes, about 3-100 masses of the sun, are thought to form when extremely massive stars, dozens or even hundreds of times as massive as the sun, reach the ends of their lives. Dying in supernovae, their cores reamin, and collapse into stellar-mass black holes. Other types of stellar remnants, like white dwarfs and neutron stars, also can be produced, but generally by stars too small to form a black hole.
+          Lower-mass black holes, about 3-100 masses of the sun, are thought to form when extremely massive stars, dozens or even hundreds of times as massive as the sun, reach the ends of their lives.
+          Dying in supernovae, their cores remain, and collapse into stellar-mass black holes.
+          Other types of stellar remnants, like white dwarfs and neutron stars, also can be produced, but generally by stars too small to form a black hole.
         </p>
         <p>
-          Larger black holes, known as intermediate mass black holes, are today something of an enigma. There is currently no obvious mechanism by which these can form, leading to multiple theories, including some about black hole mergers, and others about stellar collisons causing collapse into these objects. Whatever the mechanism is, though, intermediate mass black holes are dwarfed by the last category of black holes, known as supermassive black holes.
+          Larger black holes, known as intermediate mass black holes, are today something of an enigma.
+          There is currently no obvious mechanism by which these can form, leading to multiple theories, including some about black hole mergers, and others about stellar collisions causing collapse into these objects.
+          Whatever the mechanism is, though, intermediate mass black holes are dwarfed by the last category of black holes, known as supermassive black holes.
         </p>
         <p>
-          Supermassive black holes, like Sgr A* at the center of the Milky Way Galaxy, are extremely large black holes, with masses on the order of millions to billions of times the mass of the sun. These objects are primarily found at the cores of galaxies, spawned by the extreme conditions present in the very centers of galactic structure. They have been showed to possibly be formed as the result of direct collapse of extremely large amounts of material, but may also have been formed by extremely massive 'quasi-stars' in the early universe, and only grown since. Another theory posits that they are instead primordial black holes: Objects dating all the way back to the Big Bang itself and therefore the oldest objects in the Universe.
+          Supermassive black holes, like Sgr A* at the center of the Milky Way Galaxy, are extremely large black holes, with masses on the order of millions to billions of times the mass of the sun.
+          These objects are primarily found at the cores of galaxies, spawned by the extreme conditions present in the very centers of galactic structure.
+          They have been showed to possibly be formed as the result of direct collapse of extremely large amounts of material, but may also have been formed by extremely massive 'quasi-stars' in the early universe, and only grown since.
+          Another theory posits that they are instead primordial black holes: objects dating all the way back to the Big Bang itself and therefore the oldest objects in the Universe.
+        </p>
+        <p>
+          See <a href="models.html">here</a> for more information on how we model and understand these systems.
         </p>
       </div>
       <div id="footerspacing">
@@ -92,7 +104,7 @@
         <div id="footerlinks">
           <nav>
           <a href="credits.html">Credits and Sources</a>
-          <a href="copyright.html">Copyright</a>
+          <a href="https://www.gnu.org/licenses/gpl-3.0.en.html#license-text">Copyright</a>
           </nav>
         </div>
     </footer>
