Fix credits (to myself lol)

--- a/credits.html
+++ b/credits.html
@@ -70,8 +70,8 @@
           <h3>Observations</h3>
           <ul>
             <li><a href="https://commons.wikimedia.org/wiki/File:Accretion_disk.jpg"></a></li>
+            <li>NuSTAR image of Sgr A* produced by myself.</li>
             <li><a href="https://www.eso.org/public/images/eso2208-eht-mwa/"></a></li>
-            <li><a href="https://commons.wikimedia.org/wiki/File:IonringBlackhole.jpeg"></a></li>
           </ul>
           <h3>Models</h3>
           <ul>
