--- a/credits.html
+++ b/credits.html
@@ -46,7 +46,7 @@
           <div id="infocredits">
             <h1>Information Credits</h1>
             <ul>
-              <li>All information taken from <a href="https://www.wikipedia.org">Wikipedia</a>.</li>
+              <li>All information taken from <a href="https://www.wikipedia.org">Wikipedia</a> unless otherwise noted.</li>
             </ul>
           </div>
           <hr>
@@ -70,12 +70,14 @@
           <h3>Observations</h3>
           <ul>
             <li><a href="https://commons.wikimedia.org/wiki/File:Accretion_disk.jpg"></a></li>
-            <li>NuSTAR image of Sgr A* produced by myself.</li>
+            <li>NuSTAR image of Cyg X-1 produced by myself.</li>
             <li><a href="https://www.eso.org/public/images/eso2208-eht-mwa/"></a></li>
           </ul>
           <h3>Models</h3>
           <ul>
+	        <li><a href="https://commons.wikimedia.org/wiki/File:Spinning_and_chargend_black_hole_with_accretion_disk.jpg"></a></li>
             <li><a href="https://commons.wikimedia.org/wiki/File:Anatomy_of_a_Black_Hole.jpg"></a></li>
+	        <li><a href="https://commons.wikimedia.org/wiki/File:Pointing_X-ray_Eyes_at_our_Resident_Supermassive_Black_Hole.jpg"></a></li>
           </ul>
           <h3>Evidence</h3>
           <ul>
@@ -100,7 +102,7 @@
         <div id="footerlinks">
           <nav>
             <a href="credits.html">Credits and Sources</a>
-            <a href="https://www.gnu.org/licenses/gpl-3.0.en.html#license-text">Copyright</a>
+            <a href="https://www.gnu.org/licenses/gpl-3.0.en.html#license-text">Copyright Jack Renton Uteg, 2024</a>
           </nav>
         </div>
     </footer>
