--- a/home.html
+++ b/home.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="author" content="Jack Uteg">
-    <meta name="description" content="A Web Site for the AST 207 Final Project">
-    <title>AST 207 Black Hole Evidence Project</title>
+    <meta name="description" content="The Home page for a Web site for the AST 207 Final Project">
+    <title>Black Holes | Home</title>
     <link rel="icon" href="SgrA_EHT.jpg" type="image/x-icon">
     <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,7 +43,7 @@
       </div>
       <div id="bodytext">
         <img src="BlackHole.gif" alt="A simulation of a black hole showing relativistic effects, like Doppler beaming.">
-        <h2>What are black holes?</h2>
+        <h2 id="blackholes">What are black holes?</h2>
         <p>
           Black holes are regions of space-time caused when a massive body becomes so dense that the surface gravity of the body causes the escape velocity to exceed the speed of light.
           As nothing can travel faster than light, this creates a region of spacetime where things -- like matter and energy -- can enter, but nothing can leave.
@@ -55,7 +55,7 @@
         <br>
         <br>
         <br>
-        <h2>How were black holes discovered?</h2>
+        <h2 id="discovery">How were black holes discovered?</h2>
         <img src="Spacetime_lattice.png" alt="A simulation showing the space-time lattice of a massive body.">
         <p>
           Black holes were first predicted in 1915 by Karl Schwartzchild, a German physicist, using Albert Einstein's Theory of General Relativity, published earlier that year.
@@ -66,7 +66,7 @@
         <br>
         <br>
         <img src="PairInstability.jpg" alt="A diagram showing the cause of pair-instability supernovae.">
-        <h2>How do black holes form?</h2>
+        <h2 id="formation">How do black holes form?</h2>
         <p>
           Lower-mass black holes, about 3-100 masses of the sun, are thought to form when extremely massive stars, dozens or even hundreds of times as massive as the sun, reach the ends of their lives.
           Dying in supernovae, their cores remain, and collapse into stellar-mass black holes.
@@ -104,7 +104,7 @@
         <div id="footerlinks">
           <nav>
           <a href="credits.html">Credits and Sources</a>
-          <a href="https://www.gnu.org/licenses/gpl-3.0.en.html#license-text">Copyright</a>
+          <a href="https://www.gnu.org/licenses/gpl-3.0.en.html#license-text">Copyright Jack Renton Uteg, 2024</a>
           </nav>
         </div>
     </footer>
