--- a/modelssmbh.html
+++ b/modelssmbh.html
@@ -87,6 +87,27 @@
           While the exact value of the TOV limit is not known, current research on gravitational wave events (caused by mergers of compact objects like neutron stars or black holes) places it somewhere in the 2.2-2.9 solar masses range, and future work could further narrow it down.
           Any time we see a compact object with a mass more than the upper bounds for the TOV limit, that sets off alarm bells, suggesting the object is more than likely a black hole.
           However, black holes can have masses lower than the TOV limit, though right now there is no good mechanism by which one would form, and indeed, at present, there are no confirmed black holes with masses so low.
+        </p>
+        <br>
+        <br>
+        <br>
+        <img src="NuSTARView.jpg" alt="A zoom-view into the galactic center supermassive black hole Sgr A*, using data from NASA's NuSTAR space telescope.">
+        <h2 id="smbh">Modelling Supermassive Black Holes</h2>
+        <p>
+          Supermassive black holes are interesting objects, simply by virtue of their extreme nature.
+          Before they were identified as such, the first objects we now know to be supermassive black holes were extremely bright radio sources discovered in early all-sky surveys.
+          Originally thought to be stars, once spectra were taken, they appeared to have extreme redshift, thus indicating an extremely powerful, but extraordinarily distant, object to be the cause.
+          At the time, black holes were only theoretical, but as evidence for thier existence became stronger and their existence moved beyond the <a href="history.html">theoretical</a> into the <a href="observation.html#observing">observational</a>, the idea that these objects were in fact supermassive black holes accreting massive volumes of matter began to be accepted.          
+        </p>
+        <p>
+          Indeed, explaining quasars as supermassive black holes tells us things about both kinds of objects, explaining why quasars are more common in the early universe.
+          As a supermassive black hole persists, it will eventually consume most of the nearby matter, making it harder for the object to remain in a quasar-like state indefinitely.
+          This also tells us that these objects have been around in galaxies like our own for a very long time.
+          Together with rotation curves suggesting a massive concentration of mass in the center of galaxies, from there it was only logical to assume that many, or even most, galaxies have a supermassive black hole in their center.
+          And indeed, <a href="observation.html#sgra">Sgr A*</a>, identified as a source of interest in 1982, is today known to be the supermassive black hole at the center of the Milky Way, a 4.3 million solar mass object.
+        </p>
+        <p>
+        </p>
       </div>
       <div id="footerspacing">
         <br>
