--- a/evidence.html
+++ b/evidence.html
@@ -79,7 +79,7 @@
         <div id="footerlinks">
           <nav>
           <a href="credits.html">Credits and Sources</a>
-          <a href="https://www.gnu.org/licenses/gpl-3.0.en.html#license-text">Copyright</a>
+          <a href="https://www.gnu.org/licenses/gpl-3.0.en.html#license-text">Copyright Jack Renton Uteg, 2024</a>
           </nav>
         </div>
     </footer>
