--- a/history.html
+++ b/history.html
@@ -44,7 +44,7 @@
       </div>
       <div id="bodytext">
         <img src="Einstein.jpg" alt="A picture of Albert Einstein, taken in 1921.">
-        <h2>Early History</h2>
+        <h2 id="earlyhistory">From Confusion to Rigor</h2>
         <p>
           The history of black holes starts in 1915, with Albert Einstein's publication of the Theory of General Relativity in the form of the Einstein Field Equations.
           Though that was during the First World War, it would only take a few months before the discovery of the first solutions.
@@ -61,10 +61,10 @@
         <p>
           Time, however, was favorable to General Relativity.
           In 1933, Lema&icirctre showed that in fact the Gullstrand-Painlev&eacute solution was merely a coordinate transformation of the Schwartzchild Metric, and argued that the singularity at the event horizon was simply an artifact of the original coordinates chosen by Schwartzchild.
-          By the end of 1960s, application of new mathematics to the problem allowed for the first definition of what actually occured at the Schwartzchild Radius: a boundary in space-time coordinates, which nothing inside the object can pass.
+          By the end of 1960s, application of new mathematics to the problem allowed for the first definition of what actually occurred at the Schwartzchild Radius: a boundary in space-time coordinates, which nothing inside the object can pass.
           The singularity at the center of the black hole was also shown to appear generically.
           <br>
-          The conceptual black hole had been born and rigorized.
+          The conceptual black hole had been born and made rigorous.
         </p>
       </div>
       <div id="footerspacing">
@@ -84,7 +84,7 @@
         <div id="footerlinks">
           <nav>
           <a href="credits.html">Credits and Sources</a>
-          <a href="https://www.gnu.org/licenses/gpl-3.0.en.html#license-text">Copyright</a>
+          <a href="https://www.gnu.org/licenses/gpl-3.0.en.html#license-text">Copyright Jack Renton Uteg, 2024</a>
           </nav>
         </div>
     </footer>
