Fix spacing at 100%

--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
           As nothing can travel faster than light, this creates a region of spacetime where things -- like matter and energy -- can enter, but nothing can leave.
         </p>
         <p>
-          For the longest time, black holes were seen as possibly only theoretical.
+          <a href="history.html">For the longest time</a>, black holes were seen as possibly only theoretical.
           However, today, we have observed and studied extensively dozens of these objects, cataloging extremely compelling <a href="observation.html">observational evidence</a> for these object's existence.
         </p>
         <br>
