--- a/observation.html
+++ b/observation.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang='en'>
-
   <head>
     <meta charset="UTF-8">
     <meta name="author" content="Jack Uteg">
@@ -68,6 +67,9 @@
           By watching systems like the centers of massive globular clusters (e.g. Omega Centauri), we can look for the presence of rapidly accelerating stars.
           While reports of intermediate mass black holes in the centers of large globular clusters like Omega Cen and 47 Tuc have been shown to likely lack merit, dynamically measurements are still one of the prime ways to find massive, non-accreting black holes.
         </p>
+        <p>
+          Additionally, for supermassive black holes at the center of distant galaxies, excessive amounts of accretion can lead to these black holes becoming active galactic nuclei (AGNs), which emit extreme amounts of energy and can be seen across the universe for many billion of light years.
+        </p>
         <br>
         <br>
         <br>
@@ -88,6 +90,7 @@
         </p>
         <p>
           Today, estimates put the mass of the compact object at about 21 solar masses, putting it squarely as a stellar-mass black hole and ruling out other types of compact objects, like neutron stars.
+          Until/unless we develop faster-than-light technology, we probably will never know for sure, but it seems exceedingly likely that further evidence will only strengthen this conclusion.
         </p>
         <br>
         <br>
@@ -104,7 +107,14 @@
         </p>
         <p>
           Using radio interferometry, and with a network of telescopes all across the planet, the Event Horizon Telescope collaboration was able to produce a radio image of the supermassive black hole, down to a scale of about 0.4AU, showing a bright region of accretion around a dark area, the black hole's shadow.
-          With no other kind of dark, compact object able to reach the kind of density required, this (and the previous observation of M87*, the supermassive black hole at the center of Messier 87) has been taken as the first direct observational evidence of a black hole, providing iron-clad evidence that this once-thought-to-be-erroneous result of General Relativity is in fact a true physical reality.
+          With no other kind of dark, compact object able to reach the kind of density required, this (and the previous observation of M87*, the supermassive black hole at the center of Messier 87) has been taken as the first direct observational evidence of a black hole, even as (technically) the black hole is still not directly imaged.
+        </p>
+        <p>
+          Regardless, with no other mechanism known that can produce these results at this scale, today we have good reason to take it for granted that this object is in fact a supermassive black hole, and the closest-known one to Earth.
+          Despite this, it is also the dimmest known supermassive black hole, by a large margin.
+          While we observe many other supermassive black holes with luminosities approaching their Eddington luminosities, Sgr A* is instead orders of magnatude lower.
+          To a degree, this is probably because of the comparative difference in distances.
+          Nevertheless, it still suggests that Sgr A*'s relative quiescence is something abnormal to most galactic center supermassive black holes, even among those too dim to be AGN.
         </p>
       </div>
       <div id="footerspacing">
