--- a/history.html
+++ b/history.html
@@ -66,6 +66,18 @@
           <br>
           The conceptual black hole had been born and made rigorous.
         </p>
+        <br>
+        <br>
+        <br>
+        <h2 id="">But Are They Real?</h2>
+        <p>
+          Even once the question of if they were a physically meaningful prediciton of General Relativity had been sorted in the 1960s, the question of if they were real objects remained.
+          After all, though they were predicted, perhaps other processes might prevent their formation, some kind of 'cosmic censorship'.
+          Since looking on Earth was almost certainly fruitless -- we would've found them by now -- instead this question was turned over to the astronomers.
+          It would not be long before candidate objects were found.
+          By 1973, the famous <a href="observation.html#cygx1">Cygnus X-1</a> was identified as a prime candidate, and soon other objects too were identified.
+          With the confirmation of physical black holes, not only was Einstein again proven correct, but astrophysics now had a brand-new and exciting area of research, one which corresponded with new <a href="observation.html">observations</a> being made at the time.
+        </p>
       </div>
       <div id="footerspacing">
         <br>
