--- a/credits.html
+++ b/credits.html
@@ -54,7 +54,7 @@
           <div id="creditstatement">
             <p>Image credits listed in order of use.</p>
             <p>All images copyright respective owners.</p>
-            <p>Each image has been used unmodified.</p>
+            <p>Each image has been used unmodified, except where noted.</p>
           </div>
           <div id="imagecredits">
           <h3>Home</h3>
@@ -81,6 +81,8 @@
           </ul>
           <h3>Evidence</h3>
           <ul>
+            <li><a href="https://commons.wikimedia.org/wiki/File:1919_eclipse_negative.jpg"></a></li>
+            <li>Picture of Sgr A*'s quiescent 3-79keV NuSTAR spectrum provided by a colleague, cropped by me.</li>
           </ul>
           </div>
         </div>
