--- a/evidence.html
+++ b/evidence.html
@@ -43,23 +43,47 @@
         <br>
       </div>
       <div id="bodytext">
-        <h2>A Review of the Evidence</h2>
+        <img src="eddington1919.jpg" alt="A photographic negative of Sir Eddington's 1919 eclipse experiment, demostrating the success of General Relativity's prediction of bending light.">
+        <h2 id="theoretical">A Review of the Evidence</h2>
         <p>
-          Aliquam erat volutpat.
-          Nunc eleifend leo vitae magna.
-          In id erat non orci commodo lobortis.
-          Proin neque massa, cursus ut, gravida ut, lobortis eget, lacus.
-          Sed diam.
-          Praesent fermentum tempor tellus.
-          Nullam tempus.
-          Mauris ac felis vel velit tristique imperdiet.
-          Donec at pede.
-          Etiam vel neque nec dui dignissim bibendum.
-          Vivamus id enim.
-          Phasellus neque orci, porta a, aliquet quis, semper a, massa.
-          Phasellus purus.
-          Pellentesque tristique imperdiet tortor.
-          Nam euismod tellus id erat.
+          In light of the <a href="observation.html">observational evidence</a>, it is easy to come away with the conclusion that all is said and done.
+          And indeed, especially with the Event Horizon Telescope pictures, it is certainly to say we have more direct evidence for their existing as real, astrophysical phenomena, than for even our best theories of the universe's evolution into what we see today (that is not to say we have little evidence for those; rather, by comparison, there is far more evidence for black holes).
+          <!--I remain unconvinced by dark matter as a concept. It really feels like we haven't moved past 'yo look the galaxies are spinning wrong'. I digress.-->
+          However, before we get ahead of ourselves, it is instead more practical to consider the evidence holistically, and use that to justify the confidence which we place in it.
+        </p>
+        <p>
+          First, let it be considered that black holes were first a theoretical -- <a href="history.html">and distrusted</a> -- prediction of General Relativity, nearly half a century before the first astrophysical candidates were detected.
+          General Relativity is today one of the best-tested scientific theories, ever.
+          Every prediction made by General Relativity within the realms of our current technology to test has been shown to be true.
+          Gravitational waves, frame-dragging, the precession of the aphelion, gravitation lensing, and so on, are all predicted by the theory.
+          While they may perhaps be individually less incredible than the idea of the black hole, together they provide substantial supporting reason to not doubt the idea wholesale.
+          If such things as space-time gravitational waves can exist, is it really that extraordinary to claim that so too can a gravitational singularity?
+        </p>
+        <br>
+        <br>
+        <br>
+        <h2 id="observational">Observational Evidence</h2>
+        <img src="sgraspectrum.png" alt="A figure showing the quiescent spectrum of Sgr A*.">
+        <p>
+          Of course, it would be foolish to make the claim solely based on theoretical evidence.
+          Even given that theory permits it, it could perhaps for other reasons be impossible -- perhaps there's no reasonable mechanism for one to form, or maybe there is some other reason they cannot exist, like some kind of cosmic censorship.
+          Therefore, until observing began in earnest with the 70s, the physical existence of black holes was very much an open question.
+          Very quickly, observational astronomy returned with candidates.
+          The famous <a href="observation.html#cygx1">Cygnus X-1</a> was very early on an a prime candidate, and today we know that it has a mass on the order of 21 times that of the sun.
+          Even the most generous values of the <a href="models.html#tovlimit">Tolman-Oppenheimer-Volkoff Limit</a> would not allow a neutron star, the most likely other type of candidate compact object.
+          With no other reasonable alternatives, the only last escape is that there is some other kind of hitherto unknown compact object, that is not a black hole; however pending such an object being described a black hole remains the most likely explanation.
+        </p>
+        <p>
+          Avoiding <a href="observation.html#sgra">re-iteration</a>, it is also extremely difficult to explain the observations of galactic center behavior without another kind of extremely dense, heavy, and invisible type of object -- on the order of 4 million Suns -- it is impossible to explain the dynamical behavior of the stars near to the center of the Galaxy.
+          Perhaps the only other option is an exceptionally dense region of dark matter, but then we would neither see the same kind of spectra (see right), nor the same radio profile, as seen by the Event Horizon Telescope.
+        </p>
+        <p>
+          Beyond that, we also have self-consistent models for the <a href="home.html#formation">formation of black holes</a>, from core-collapse supernovae, to direct collapse to supermassive black holes, or perhaps even more exotic -- but still perfectly reasonable -- models like that of the immensely massive quasi-star from the early universe.
+          No matter which way we take it, there is an awful lot of evidence here, collected over decades of study, and with ample theoretical basing behind it.
+        </p>
+        <hr>
+        <p>
+          In short: despite how extreme the idea of the black hole is, there is more than enough compelling evidence for their existence, from theory and observation, to state beyond any reasonable doubt that they exist, and are a real and fascinating part of the Universe in which we live.
         </p>
       </div>
       <div id="footerspacing">
