--- a/history.html
+++ b/history.html
@@ -71,7 +71,7 @@
         <br>
         <h2 id="">But Are They Real?</h2>
         <p>
-          Even once the question of if they were a physically meaningful prediciton of General Relativity had been sorted in the 1960s, the question of if they were real objects remained.
+          Even once the question of if they were a physically meaningful prediction of General Relativity had been sorted in the 1960s, the question of if they were real objects remained.
           After all, though they were predicted, perhaps other processes might prevent their formation, some kind of 'cosmic censorship'.
           Since looking on Earth was almost certainly fruitless -- we would've found them by now -- instead this question was turned over to the astronomers.
           It would not be long before candidate objects were found.
