--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
         </p>
         <p>
           <a href="history.html">For the longest time</a>, black holes were seen as possibly only theoretical.
-          However, today, we have observed and studied extensively dozens of these objects, cataloging extremely compelling <a href="observation.html">observational evidence</a> for these object's existence.
+          Today, however, we have amassed a large amount of compelling <a href="evidence.html">evidence</a>, both <a href="models.html">theoretical</a> and <a href="observation.html">observational</a>, such that it is, in light of the evidence, extremely difficult to deny their reality.
         </p>
         <br>
         <br>
