--- a/models.html
+++ b/models.html
@@ -44,7 +44,7 @@
       </div>
       <div id="bodytext">
         <img src="KerrNewman.jpg" alt="A ray-traced simulation of a Kerr-Newman black hole.">
-        <h2 id="relativity">Modelling the Black Hole with General Relativity</h2>
+        <h2 id="relativity">Modeling the Black Hole with General Relativity</h2>
         <p>
           General Relativity, and consequently the black hole, is an exceptionally complex (though also elegant) theory, which can only be appreciated fully in the pure form of its mathematics.
           Nevertheless, several different models of black holes are generated, making different assumptions and generalizations about the objects they model.
@@ -53,7 +53,7 @@
           <a href="history.html">Early on</a>, the first developed solutions to General Relativity was the Schwartzchild Metric, which models the space-time effects of a non-charged, non-rotating, and spherically-symmetric massive body.
           This can be applied to both classical objects like the Earth or Sun, but also makes predictions about behavior as an object becomes sufficiently small and massive -- that is, a black hole.
           Later on, Roy Kerr would develop what today is known as the Kerr Metric, which describes a non-charged and spinning object.
-          Solutions for charged objects would also be developed at different points, with the effect that by 1965 the Kerr-Newman Metric allows for modelling a super-charged and quickly rotating object.
+          Solutions for charged objects would also be developed at different points, with the effect that by 1965 the Kerr-Newman Metric allows for modeling a super-charged and quickly rotating object.
           In practice, however, the Kerr Metric is usually sufficient, since most astronomical objects lack an appreciable charge
         </p>
         <br>
@@ -62,7 +62,7 @@
         <img src="BlackHoleAnatomy.jpg" alt="An artist's impression of a black hole system, labelled with the different parts of the object.">
         <h2 id="astrophysical">Astrophysical Black Hole Systems</h2>
         <p>
-          In addition to the reletivistic modelling, astrophysicists also model these systems, but focusing less on the space-time effects, but rather on the astrophysical implications of a compact and massive object.
+          In addition to the relativistic modeling, astrophysicists also model these systems, but focusing less on the space-time effects, but rather on the astrophysical implications of a compact and massive object.
           One of the primary types of systems we see are X-ray binaries.
           These systems, of which <a href="observation.html#cygx1">Cyg X-1</a> is prototypical, we model as a binary system, where one of the objects is usually a main-sequence star, and the other a massive compact object -- like a black hole.
           These kinds of systems are known as X-ray binaries because they tend to have strong X-ray emissions.
@@ -73,7 +73,7 @@
         <p>
           As the compact object and its partner orbit, depending on the geometry of the orbit, we will see variability as the compact object potentially passes behind the other object.
           This will result in a massive dimming in X-rays on a very consistent period.
-          We can then use this periodic dimming to determine the period of the orbit, and then combining that with measuring doppler shift in the spectra, allows us to determine the speed of the second object, which we can then weigh the compact object.
+          We can then use this periodic dimming to determine the period of the orbit, and then combining that with measuring Doppler shift in the spectra, allows us to determine the speed of the second object, which we can then weigh the compact object.
         </p>
         <p>
           Depending on the weight of the compact object, we can learn what kind of system it is.
