--- a/observation.html
+++ b/observation.html
@@ -102,7 +102,7 @@
           By 1994, infrared and short-wavelength radio had already shown that the object was compact and weighed about 3 million times the mass of the Sun.
         </p>
         <p>
-          Soon, other explanations were ruled out, and by 2003, orbital analysis of stars in the region of Sgr A* showed that the whole mass was within a very small region, about 6 light-hours -- consistent with Sgr A* being the <a href="models.html#smbh">supermassive black hole</a> at the center of the Milky Wat Galaxy.
+          Soon, other explanations were ruled out, and by 2003, orbital analysis of stars in the region of Sgr A* showed that the whole mass was within a very small region, about 6 light-hours -- consistent with Sgr A* being the <a href="models.html#smbh">supermassive black hole</a> at the center of the Milky Way Galaxy.
           Further results showed hot-spots, consistent with the accretion of hot material, falling into the event horizon, but the 'smoking gun' came with the Event Horizon Telescope's famous 2022 image of the region immediately around Sgr A*.
         </p>
         <p>
@@ -112,7 +112,7 @@
         <p>
           Regardless, with no other mechanism known that can produce these results at this scale, today we have good reason to take it for granted that this object is in fact a supermassive black hole, and the closest-known one to Earth.
           Despite this, it is also the dimmest known supermassive black hole, by a large margin.
-          While we observe many other supermassive black holes with luminosities approaching their Eddington luminosities, Sgr A* is instead orders of magnatude lower.
+          While we observe many other supermassive black holes with luminosities approaching their Eddington luminosities, Sgr A* is instead orders of magnitude lower.
           To a degree, this is probably because of the comparative difference in distances.
           Nevertheless, it still suggests that Sgr A*'s relative quiescence is something abnormal to most galactic center supermassive black holes, even among those too dim to be AGN.
         </p>
