--- a/models.html
+++ b/models.html
@@ -54,7 +54,7 @@
           This can be applied to both classical objects like the Earth or Sun, but also makes predictions about behavior as an object becomes sufficiently small and massive -- that is, a black hole.
           Later on, Roy Kerr would develop what today is known as the Kerr Metric, which describes a non-charged and spinning object.
           Solutions for charged objects would also be developed at different points, with the effect that by 1965 the Kerr-Newman Metric allows for modeling a super-charged and quickly rotating object.
-          In practice, however, the Kerr Metric is usually sufficient, since most astronomical objects lack an appreciable charge
+          In practice, however, the Kerr Metric is usually sufficient, since most astronomical objects lack an appreciable charge.
         </p>
         <br>
         <br>
